--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>I'M FAVOUR</title>
 </head>
-<body style="background-color: black">
+<body style="background-color: black; font-family: Arial, san-serif">
   <h6>
-    <span style="font-size:6rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase; margin-top:100px">
+    <span style="font-size:4rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase; margin-top:100px">
     This is not what you came to see, but it's cool and...
     </span>
   </h6> 
