--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <title>I'M FAVOUR</title>
+  <style>
+  .images {
+    margin-top: 300px;
+  }
+</style>
 </head>
 <body style="background-color: black; font-family: Arial, san-serif">
   <h6>
@@ -11,7 +16,7 @@
     This is not what you came to see, but it's cool and...
     </span>
   </h6> 
-  <div>
+  <div class="images">
     <span>
       <img src="./images/ugly.jpg" width="100%" height="100%">
     </span>
