--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
   <title>I'M FAVOUR</title>
   <style>
   .images {
-    margin-top: 300px;
+    margin: 100px;
   }
 </style>
 </head>
 <body style="background-color: black; font-family: Arial, san-serif">
-  <h6>
-    <span style="font-size:5rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase; margin-top:100px">
-    This is not what you came to see, but it's cool and...
-    </span>
-  </h6> 
-  <div class="images">
+  <div class="imag2es">
     <span>
       <img src="./images/ugly.jpg" width="100%" height="100%">
     </span>
+  </div>
+    <div class="images">
+    <h6>
+      <span style="font-size:5rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase; margin-top:100px">
+      This is not what you came to see, but it's cool.
+      </span>
+    </h6> 
   </div>
 </body>
 </html>
