--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   .images {
     margin: 100px;
   }
+  u {
+    text-decoration-color: yellow;
+    text-decoration-style: underline;
+    text-decoration-thickness: 30px;
+  }
 </style>
 </head>
 <body style="background-color: black; font-family: Arial, san-serif">
@@ -19,7 +24,7 @@
     <div class="images">
     <h6>
       <span style="font-size:5rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase; margin-top:100px">
-      This is not what you came to see, but it's cool.
+      This is not what you are looking for, but it's <u>cool.</u>
       </span>
     </h6> 
   </div>
