Changed the text

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   .images {
     margin: 100px;
   }
-  u {
-    text-decoration-color: yellow;
-    text-decoration-style: underline;
-    text-decoration-thickness: 30px;
-  }
+  
 </style>
 </head>
 <body style="background-color: black; font-family: Arial, san-serif">
@@ -23,9 +19,10 @@
   </div>
     <div class="images">
     <h6>
-      <span style="font-size:5rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase; margin-top:100px">
-      This is not what you are looking for, but it's <u>cool.</u>
-      </span>
+      <span style="font-size:5rem; text-align: center; color: #fff; display: flex; justify-content:center; text-transform:uppercase">
+      This is not what you are looking for, but it's</span><span style="font-size:5rem; text-align: center; color: #000; display: flex; justify-content:center; padding: 10px 20px; border: 1px solid black; border-radius: 20px; background: yellow; text-transform:uppercase">
+     cool.</span>
+     
     </h6> 
   </div>
 </body>
